feat: Added support for file system cached hytale modding responses